versioned_docs/version-2.0.x/client-api/sending-data.mdx
---
sidebar_position: 3
---
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

# Sending data

## Waiter
ZilaWS has a unique function called [waiter](../waiters). Waiters (as their name states) can be awaited.
They only resolve when the `MessageHandler` on the client side resolves or returns thus making it perfect to retrieve data from a client.
However if the client does not respond in time, waiters will resolve as *undefined*.

#### Syntax

```ts
waiter(eventHandlerName: string, ...data: any[])
```

<Tabs>
  <TabItem value="S" label="Client Side">
```ts
console.log(await client.waiter("Example name", "myData", true));
```
  </TabItem>
  <TabItem value="C" label="Server Side">
```ts
server.setMessageHandler("Example name", (data1: string, data2: boolean) => {
    //Your code here...
    return "This is message from the client side";
});
```
  </TabItem>
</Tabs>

## Send
You can send data / trigger a `MessageHandler` by calling the `send` function.
You can send any number of variables with any types.

#### Syntax
```ts
send(eventHandlerName: string, ...data: any[])
```

<Tabs>
  <TabItem value="S" label="Client Side">
```ts
client.send("Example name", "myData", true);
```
  </TabItem>
  <TabItem value="C" label="Server Side">
```ts
server.setMessageHandler("Example name", (data1: string, data2: boolean) => {
    //Your code here...
});
```
  </TabItem>
</Tabs>